--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -9,9 +9,9 @@
   </a>
   <h2>I'm <a href="/">{{ site.data.theme.name }}</a>.</h2>
   <div id="bio">
-    <p>Windows App Developer, .NET Developer, Animation Designer</p>
+    <p>A brief bio or something witty.</p>
     <p>
-      I am student studying in BITS-Pilani, Pilani Campus, pursuing a dual degree in Economics and Electrical and Electronics Engineering</code>
+      Edit me in <code>_includes/sidebar.html</code>
     </p>
   </div>
   <div id="social">
