--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -9,9 +9,9 @@
   </a>
   <h2>I'm <a href="/">{{ site.data.theme.name }}</a>.</h2>
   <div id="bio">
-    <p>A brief bio or something witty.</p>
+    <p>Windows Phone Developer, .NET developer, Animation Designer</p>
     <p>
-      Edit me in <code>_includes/sidebar.html</code>
+      I'm a student of BITS-Pilani, pursuing a dual degree in Economics and Electrical and Electronics Engineering
     </p>
   </div>
   <div id="social">
